fixed hero text not showing on mobile, turned off spline on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -33,11 +33,32 @@ code {
   margin-right: 5% !important;
 }
 
+.onlyMobile {
+  display: none;
+}
+
+@media only screen and (max-width: 768px) {
+  .onlyMobile {
+    display: block;
+  }
+}
+
+.onlyDesktop {
+  display: none;
+}
+
+@media only screen and (min-width: 769px) {
+  .onlyDesktop {
+    display: block;
+  }
+}
+
 .aStyle,
 .aStyle:hover {
   color: white;
   text-decoration: none;
 }
 
-@media (max-width: 600px) {
+.footerContent {
+  color: gray;
 }
